# Learning-Assistant

./: README.md  main.py  package-lock.json  pyproject.toml  run.py
front/: package-lock.json  package.json  vue.config.js
front/router/: router.js
front/src/: App.vue
front/src/plugins/: vuetify.js
front/src/router/: index.js
front/src/views/: DetailView.vue  HomeView.vue  ListView.vue  ResultView.vue  UploadView.vue
input_file/: test.md
learning_assistant_server/: __init__.py  app.py  database.py  db.sqlite3
